<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserDetailsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:src="@drawable/superhero" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/know_you"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="5dp"
        android:paddingBottom="10dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/birthYearEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/birth_year"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/gender_options" />

    <Spinner
        android:id="@+id/genereSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/genre_options" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onContinueClick"
        android:text="continue" />

</LinearLayout>